# gas_leak_simulator

./: README.md
gas_dispersion_simulation/environment/: CMakeLists.txt  configuration_dispsim.rviz
gas_dispersion_simulation/environment/include/environment/: environment.h
gas_dispersion_simulation/environment/src/: environment.cpp
gas_dispersion_simulation/simulated_tdlas/: CMakeLists.txt  package.xml
gas_dispersion_simulation/simulated_tdlas/include/simulated_tdlas/: fake_tdlas.h
gas_dispersion_simulation/simulated_tdlas/src/: fake_tdlas.cpp
gas_viz/gas_concentration_visualization/: CMakeLists.txt  rviz_config.rviz
gas_viz/gas_concentration_visualization/include/gas_concentration_visualization/: gas_concentration_visualization.h  gas_map.h
gas_viz/gas_concentration_visualization/launch/: Obstacles_SL1_TDLAS_sensing.launch  demo_Obstacles_SL2A.launch  demo_Obstacles_SL2B.launch  demo_Robot_arena_trial1e.launch  demo_Robot_arena_trial1p.launch  demo_Robot_arena_trial2e.launch  demo_Robot_arena_trial2p.launch  demo_corridor.launch  demo_mox_positionC.launch
gas_viz/gas_concentration_visualization/simulation_data_package/Obstacles_SL1/wind_flow/: t600s_030.100.csv_U  t600s_030.1000.csv_U  t600s_030.1002.csv_U  t600s_030.1002.csv_V  t600s_030.1007.csv_W  t600s_030.1008.csv_U  t600s_030.1010.csv_V  t600s_030.1011.csv_U  t600s_030.1015.csv_V  t600s_030.102.csv_W  t600s_030.1021.csv_V  t600s_030.1024.csv_V  t600s_030.1025.csv_U  t600s_030.1028.csv_W  t600s_030.1029.csv_V  t600s_030.1030.csv_U  t600s_030.1030.csv_W  t600s_030.1042.csv_V  t600s_030.1049.csv_V  t600s_030.1049.csv_W  t600s_030.1050.csv_U  t600s_030.1055.csv_W  t600s_030.1060.csv_W  t600s_030.1063.csv_U  t600s_030.1066.csv_U  t600s_030.1066.csv_V  t600s_030.1067.csv_U  t600s_030.107.csv_U  t600s_030.107.csv_W  t600s_030.1071.csv_V  t600s_030.1072.csv_U  t600s_030.1073.csv_U  t600s_030.1080.csv_V  t600s_030.1083.csv_V  t600s_030.1083.csv_W  t600s_030.109.csv_U  t600s_030.109.csv_V  t600s_030.1096.csv_V  t600s_030.1097.csv_U  t600s_030.110.csv_U  (+738 more)
gas_viz/gas_concentration_visualization/simulation_data_package/Obstacles_SL2B/: original.env
gas_viz/gas_concentration_visualization/simulation_data_package/Robot_arena_trial2p/: japan.env
gas_viz/gas_concentration_visualization/src/: gas_concentration_visualization.cpp  gas_map.cpp
gas_viz/gas_concentration_visualization/virtual_sensor_matlab/SimulatedMOXsensor/: CheckDistributionInLayer.m  CheckSensorReadingDistribution_Main.m  SimulatedMOX_Main.m  SimulatedMoxTest.m  VirtualSensorResponse_MOX.m
gas_viz/gas_concentration_visualization/virtual_sensor_matlab/SimulatedTDLASsensor/: GetCellCenter.m  GetConcentration.m  GetEnviornmentInformation.m  IntegralMeasurementDecomposition2D.m  IntegralMeasurementDecomposition3D.m  LoadEnviornment.m  Simulated_TDLAS.m  TDLAS_test.m  VirtualSsensorResponse2D_TDLAS.m  VirtualSsensorResponse3D_TDLAS.m  VirtualSsensorResponse_simplifiedTDLAS.m
(+8164 files in other folders)
